--- a/gen.html
+++ b/gen.html
@@ -531,8 +531,8 @@
         // =========================================================
         //    	       KONFIGURACJA CLOUDINARY - ZMIEŃ TO!
         // =========================================================
-        const CLOUD_NAME = 'dijqrebua';           // <--- ZMIEŃ NA SWÓJ KLUCZ
-        const UPLOAD_PRESET = 'eobywatel'; // <--- ZMIEŃ NA SWÓJ KLUCZ
+        const CLOUD_NAME = 'dxa6idkzd';           // <--- ZMIEŃ NA SWÓJ KLUCZ
+        const UPLOAD_PRESET = 'fotka1'; // <--- ZMIEŃ NA SWÓJ KLUCZ
         // =========================================================
         
         const form = document.getElementById('dataGenerator');
